--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>About myself</h1>
     My name is Nwjwr Khungur Brahma, I'm from AI20 Btech branch.
     <p>I don't have fixed hobbies. Like I love playing football but now i stopped playing.</p>
-    <p>I have no past experiences in working in a club environment but would love to learn. Kinda good with HTML I would say but learning the  part.</p>
+    <p>I have no past experiences in working in a club environment but would love to learn. Kinda good with HTML I would say but learning the CSS part.</p>
     <img src="images/MonkaS.jpg" class="center">
   </body>
 </html>
