--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <link href="styles/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Zen+Loop&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Playfair+Display&family=Zen+Loop&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>About myself</h1>
-    My name is Nwjwr Khungur Brahma, I'm from AI20 Btech branch.
-    <p>I don't have fixed hobbies. Like I love playing football but now i stopped playing.</p>
-    <p>I have no past experiences in working in a club environment but would love to learn. Kinda good with HTML I would say but learning the CSS part.</p>
-    <img src="images/MonkaS.jpg" class="center">
+    <div class="myself">
+      <h1>About myself</h1>
+      <strong>
+      My name is Nwjwr Khungur Brahma, I'm from AI21 Btech branch.
+      <p>I don't have fixed hobbies. Like I love playing football but now i stopped playing.</p>
+      <p>I have no past experiences in working in a club environment but would love to learn. Kinda good with HTML I would say but learning the CSS part.</p>
+      </strong> 
+    </div>
+    <div class="random">
+      <h2>Now more about me</h2>
+      <ul>
+        <li>I love watching F1 and would love to attend a F1 GP atleast once in life.</li>
+        <li>I'm an introvert that is why trying to get into the club which I'm interested in.</li>
+        <li>Even though my roll no. suggest that I'm a AI20 student but actually now I'm a AI21 student. Had to drop two semesters for medical reasons</li>
+        <li>Link to my linkedin is <a href="https://www.linkedin.com/in/nwjwr-khungur-brahma-17a280236">here</a>.</li>
+      </ul>
+      <img src="images/MonkaS.jpg" alt="MonkaS" class="center">
+      <p>Note: The image used has copyright and I'm not the owner. Downloaded from <a href="https://knowyourmeme.com/memes/monkas">source</a>.</p>
+    </div>
   </body>
 </html>
