--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>Link to my linkedin is <a href="https://www.linkedin.com/in/nwjwr-khungur-brahma-17a280236">here</a>.</li>
       </ul>
       <img src="images/MonkaS.jpg" alt="MonkaS" class="center">
-      <p>Note: The image used has copyright and I'm not the owner. Downloaded from <a href="https://knowyourmeme.com/memes/monkas">source</a>.</p>
+      <p>Note: The image used has copyright and I'm not the owner. Just added this emote for fun (btw average twitch viewer). Downloaded from <a href="https://knowyourmeme.com/memes/monkas">source</a>.</p>
     </div>
   </body>
 </html>
