editted some files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="myself">
-      <h1>About myself</h1>
+      <h1>Introduction</h1>
       <strong>
       My name is Nwjwr Khungur Brahma, I'm from AI21 Btech branch.
       <p>I don't have fixed hobbies. Like I love playing football but now i stopped playing.</p>
