added new things

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <div class="myself">
-      <h1>Introduction</h1>
+      <h1>E-Cell Introduction</h1>
       <strong>
-      My name is Nwjwr Khungur Brahma, I'm from AI21 Btech branch.
-      <p>I don't have fixed hobbies. Like I love playing football but now i stopped playing.</p>
-      <p>I have no past experiences in working in a club environment but would love to learn. Kinda good with HTML I would say but learning the CSS part.</p>
+      My name is Nwjwr Khungur Brahma, I'm from AI21 Btech branch.<br>
+      I don't have fixed hobbies. Like I love playing football but now i stopped playing.<br>
+      I have no past experiences in working in a club environment but would love to learn. Kinda good with HTML I would say but learning the CSS part.<br>
       </strong> 
     </div>
     <div class="random">
@@ -24,8 +24,13 @@
         <li>Even though my roll no. suggest that I'm a AI20 student but actually now I'm a AI21 student. Had to drop two semesters for medical reasons</li>
         <li>Link to my linkedin is <a href="https://www.linkedin.com/in/nwjwr-khungur-brahma-17a280236">here</a>.</li>
       </ul>
-      <img src="images/MonkaS.jpg" alt="MonkaS" class="center">
-      <p>Note: The image used has copyright and I'm not the owner. Just added this emote for fun (btw average twitch viewer). Downloaded from <a href="https://knowyourmeme.com/memes/monkas">source</a>.</p>
+      <p id="note">Note: Image by <a rel="nofollow" class="external text" href="https://www.flickr.com/people/49703787@N05&quot>Instituto Ayrton Senna</a> - <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/institutoayrtonsenna/5547029889/">Senna e a conquista de seu primeiro título, em 1988</a>, <a href="https://creativecommons.org/licenses/by/2.0" title="Creative Commons Attribution 2.0">CC BY 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=28825008">Link</a></p>
+    </div>
+    <div class="contact">
+      <div id="bold">Contact info:</div>
+      Email:  ai20btech11016@iith.ac.in <br>
+      &ensp; &ensp; &ensp; &ensp; brahmanwjwr10@gmail.com<br>
+      Phone no: +91 8761063515
     </div>
   </body>
 </html>
